ifcviewer/ifcengine/include/ifcengine.h

#define		sdaiSTRING				sdaiREAL + 1
typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
typedef	int_t			* SchemaAggr;
SdaiAggr		DECL STDC	sdaiGetEntityExtentBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	SdaiAggr	sdaiGetEntityExtentBN(
									SdaiModel				model,
									char					* entityName
								)
{
	return	sdaiGetEntityExtentBN(
					model,
					(const char*) entityName
				);
}
const char		DECL * STDC	engiGetEntityName(
									SdaiEntity				entity,
									SdaiPrimitiveType		valueType,
									const char				** entityName
								);
static	inline	const char	* engiGetEntityName(
									SdaiEntity				entity,
									SdaiPrimitiveType		valueType,
									char					** entityName
								)
{
	return	engiGetEntityName(
					entity,
					valueType,
					(const char**) entityName
				);
}
static	inline	const char	* engiGetEntityName(
									SdaiEntity				entity,
									SdaiPrimitiveType		valueType
								)
{
	return	engiGetEntityName(
					entity,
					valueType,
					(const char**) nullptr				
				);
}
int_t			DECL STDC	engiGetEntityNoAttributes(
									SdaiEntity				entity
								);
int_t			DECL STDC	engiGetEntityNoAttributesEx(
									SdaiEntity				entity,
									bool					includeParent,
									bool					includeInverse
								);
int_t			DECL STDC	engiGetEntityNoArguments(
									SdaiEntity				entity
								);
SdaiPrimitiveType	DECL STDC	engiGetAttributeType(
									const SdaiAttr			attribute
								);
SdaiPrimitiveType	DECL STDC	engiGetArgumentType(
									const SdaiAttr			attribute
								);
SdaiEntity		DECL STDC	engiGetEntityParent(
									SdaiEntity				entity
								);
int_t			DECL STDC	engiGetEntityNoParents(
									SdaiEntity				entity
								);
SdaiEntity		DECL STDC	engiGetEntityParentEx(
									SdaiEntity				entity,
									SdaiInteger				index
								);
int_t			DECL STDC	engiGetAttrOptional(
									const SdaiAttr			attribute
								);
int_t			DECL STDC	engiGetAttrOptionalBN(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	int_t	engiGetAttrOptionalBN(
								SdaiEntity				entity,
								char					* attributeName
							)
{
	return	engiGetAttrOptionalBN(
					entity,
					(const char*) attributeName
				);
}
int_t			DECL STDC	engiGetAttrInverse(
									const SdaiAttr			attribute
								);
int_t			DECL STDC	engiGetAttrInverseBN(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	int_t	engiGetAttrInverseBN(
								SdaiEntity				entity,
								char					* attributeName
							)
{
	return	engiGetAttrInverseBN(
					entity,
					(const char*) attributeName
				);
}
const char		DECL * STDC	engiGetAttrDomain(
									const SdaiAttr			attribute,
									const char				** domainName
								);
static	inline	const char	* engiGetAttrDomain(
									const SdaiAttr			attribute,
									char					** domainName
								)
{
	return	engiGetAttrDomain(
					attribute,
					(const char**) domainName
				);
}
static	inline	const char	* engiGetAttrDomain(
									const SdaiAttr			attribute
								)
{
	return	engiGetAttrDomain(
					attribute,
					(const char**) nullptr				
				);
}
const char		DECL * STDC	engiGetAttrDomainBN(
									SdaiEntity				entity,
									const char				* attributeName,
									const char				** domainName
								);
static	inline	const char	* engiGetAttrDomainBN(
									SdaiEntity				entity,
									char					* attributeName,
									char					** domainName
								)
{
	return	engiGetAttrDomainBN(
					entity,
					(const char*) attributeName,
					(const char**) domainName
				);
}
static	inline	const char	* engiGetAttrDomainBN(
									SdaiEntity				entity,
									const char				* attributeName
								)
{
	return	engiGetAttrDomainBN(
					entity,
					attributeName,
					(const char**) nullptr				
				);
}
int_t			DECL STDC	engiGetEntityIsAbstract(
									SdaiEntity				entity
								);
int_t			DECL STDC	engiGetEntityIsAbstractBN(
									SdaiModel				model,
									const char				* entityName
								);
static	inline	int_t	engiGetEntityIsAbstractBN(
								SdaiModel				model,
								char					* entityName
							)
{
	return	engiGetEntityIsAbstractBN(
					model,
					(const char*) entityName
				);
}
const char		DECL * STDC	engiGetEnumerationValue(
									const SdaiAttr			attribute,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									const char				** enumerationValue
								);
static	inline	const char	* engiGetEnumerationValue(
									const SdaiAttr			attribute,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									char					** enumerationValue
								)
{
	return	engiGetEnumerationValue(
					attribute,
					index,
					valueType,
					(const char**) enumerationValue
				);
}
static	inline	const char	* engiGetEnumerationValue(
									const SdaiAttr			attribute,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType
								)
{
	return	engiGetEnumerationValue(
					attribute,
					index,
					valueType,
					(const char**) nullptr				
				);
}
SdaiAttr		DECL STDC	engiGetEntityAttributeByIndex(
									SdaiEntity				entity,
									SdaiInteger				index,
									bool					countedWithParents,
									bool					countedWithInverse
								);
void			DECL STDC	engiGetAttributeTraits(
									const SdaiAttr			attribute,
									const char				** name,
									SdaiEntity				* definingEntity,
									bool					* inverse,
									enum_express_attr_type	* attrType,
									SdaiEntity				* domainEntity,
									SchemaAggr				* aggregationDescriptor,
									bool					* optional,
									bool					* unique
								);
static	inline	void	engiGetAttributeTraits(
								const SdaiAttr			attribute,
								char					** name,
								SdaiEntity				* definingEntity,
								bool					* inverse,
								enum_express_attr_type	* attrType,
								SdaiEntity				* domainEntity,
								SchemaAggr				* aggregationDescriptor,
								bool					* optional,
								bool					* unique
							)
{
	return	engiGetAttributeTraits(
					attribute,
					(const char**) name,
					definingEntity,
					inverse,
					attrType,
					domainEntity,
					aggregationDescriptor,
					optional,
					unique
				);
}
void			DECL STDC	engiGetAggregation(
									SchemaAggr				aggregationDescriptor,
									enum_express_aggr		* aggrType,
									int_t					* cardinalityMin,
									int_t					* cardinalityMax,
									SchemaAggr				* nextAggregationLevelDescriptor
								);
void			DECL STDC	SetSPFFHeader(
									SdaiModel				model,
									const char				* description,
									const char				* implementationLevel,
									const char				* name,
									const char				* timeStamp,
									const char				* author,
									const char				* organization,
									const char				* preprocessorVersion,
									const char				* originatingSystem,
									const char				* authorization,
									const char				* fileSchema
								);
static	inline	void	SetSPFFHeader(
								SdaiModel				model,
								char					* description,
								char					* implementationLevel,
								char					* name,
								char					* timeStamp,
								char					* author,
								char					* organization,
								char					* preprocessorVersion,
								char					* originatingSystem,
								char					* authorization,
								char					* fileSchema
							)
{
	return	SetSPFFHeader(
					model,
					(const char*) description,
					(const char*) implementationLevel,
					(const char*) name,
					(const char*) timeStamp,
					(const char*) author,
					(const char*) organization,
					(const char*) preprocessorVersion,
					(const char*) originatingSystem,
					(const char*) authorization,
					(const char*) fileSchema
				);
}
int_t			DECL STDC	SetSPFFHeaderItem(
									SdaiModel				model,
									int_t					itemIndex,
									int_t					itemSubIndex,
									SdaiPrimitiveType		valueType,
									const void				* value
								);
static	inline	int_t	SetSPFFHeaderItem(
								SdaiModel				model,
								int_t					itemIndex,
								int_t					itemSubIndex,
								SdaiPrimitiveType		valueType,
								const char				* value
							)
{
	return	SetSPFFHeaderItem(
					model,
					itemIndex,
					itemSubIndex,
					valueType,
					(const void*) value
				);
}
static	inline	int_t	SetSPFFHeaderItem(
								SdaiModel				model,
								int_t					itemIndex,
								int_t					itemSubIndex,
								SdaiPrimitiveType		valueType,
								char					* value
							)
{
	return	SetSPFFHeaderItem(
					model,
					itemIndex,
					itemSubIndex,
					valueType,
					(const void*) value
				);
}
static	inline	int_t	SetSPFFHeaderItem(
								SdaiModel				model,
								int_t					itemIndex,
								int_t					itemSubIndex,
								SdaiPrimitiveType		valueType,
								const wchar_t			* value
							)
{
	return	SetSPFFHeaderItem(
					model,
					itemIndex,
					itemSubIndex,
					valueType,
					(const void*) value
				);
}
static	inline	int_t	SetSPFFHeaderItem(
								SdaiModel				model,
								int_t					itemIndex,
								int_t					itemSubIndex,
								SdaiPrimitiveType		valueType,
								wchar_t					* value
							)
{
	return	SetSPFFHeaderItem(
					model,
					itemIndex,
					itemSubIndex,
					valueType,
					(const void*) value
				);
}
SdaiPrimitiveType	DECL STDC	engiGetAttrType(
									const SdaiAttr			attribute
								);