ifcviewer/ifcengine/include/IfcEngine.cs


		[DllImport(IFCEngineDLL, EntryPoint = "sdaiGetEntityExtentBN")]
		public static extern int_t sdaiGetEntityExtentBN(int_t model, byte[] entityName);

		/// <summary>
		///		engiGetEntityName                                       (http://rdf.bg/ifcdoc/CS64/engiGetEntityName.html)
		///
		///	This call can be used to get the name of the given entity.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityName")]
		public static extern void engiGetEntityName(int_t entity, int_t valueType, out IntPtr entityName);

		public static string engiGetEntityName(int_t entity)
		{
			IntPtr entityName = IntPtr.Zero;
			engiGetEntityName(entity, sdaiSTRING, out entityName); //marshaline expects ANSI
			return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(entityName);
		}

		/// <summary>
		///		engiGetEntityNoAttributes                               (http://rdf.bg/ifcdoc/CS64/engiGetEntityNoAttributes.html)
		///
		///	This call returns the number of arguments, this includes the arguments of its (nested) parents and inverse argumnets.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityNoAttributes")]
		public static extern int_t engiGetEntityNoAttributes(int_t entity);

		/// <summary>
		///		engiGetEntityNoAttributesEx                             (http://rdf.bg/ifcdoc/CS64/engiGetEntityNoAttributesEx.html)
		///
		///	This call returns the number of attributes, inclusion of parents and inverse depeds on includeParent and includeInverse values
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityNoAttributesEx")]
		public static extern int_t engiGetEntityNoAttributesEx(int_t entity, byte includeParent, byte includeInverse);

		/// <summary>
		///		engiGetEntityNoArguments                                (http://rdf.bg/ifcdoc/CS64/engiGetEntityNoArguments.html)
		///
		///	DEPRECATED use engiGetEntityNoAttributes
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityNoArguments")]
		public static extern int_t engiGetEntityNoArguments(int_t entity);

		/// <summary>
		///		engiGetAttributeType                                    (http://rdf.bg/ifcdoc/CS64/engiGetAttributeType.html)
		///
		///	DEPRECATED use engiGetAttrType
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttributeType")]
		public static extern int_t engiGetAttributeType(int_t attribute);

		/// <summary>
		///		engiGetArgumentType                                     (http://rdf.bg/ifcdoc/CS64/engiGetArgumentType.html)
		///
		///	DEPR4ECATED use engiGetAttributeType
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetArgumentType")]
		public static extern int_t engiGetArgumentType(int_t argument);

		/// <summary>
		///		engiGetEntityParent                                     (http://rdf.bg/ifcdoc/CS64/engiGetEntityParent.html)
		///
		///	Returns the first direct parent entity, for example the parent of IfcObject is IfcObjectDefinition, of IfcObjectDefinition is IfcRoot and of IfcRoot is 0.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityParent")]
		public static extern int_t engiGetEntityParent(int_t entity);

		/// <summary>
		///		engiGetEntityNoParents                                  (http://rdf.bg/ifcdoc/CS64/engiGetEntityNoParents.html)
		///
		///	Returns number of direct parents entity
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityNoParents")]
		public static extern int_t engiGetEntityNoParents(int_t entity);

		/// <summary>
		///		engiGetEntityParentEx                                   (http://rdf.bg/ifcdoc/CS64/engiGetEntityParentEx.html)
		///
		///	Returns the N-th direct parent of entity or NULL if index exceeds number of parents
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityParentEx")]
		public static extern int_t engiGetEntityParentEx(int_t entity, int_t index);

		/// <summary>
		///		engiGetAttrOptional                                     (http://rdf.bg/ifcdoc/CS64/engiGetAttrOptional.html)
		///
		///	This call can be used to check if an attribute is optional
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrOptional")]
		public static extern int_t engiGetAttrOptional(int_t attribute);

		/// <summary>
		///		engiGetAttrOptionalBN                                   (http://rdf.bg/ifcdoc/CS64/engiGetAttrOptionalBN.html)
		///
		///	This call can be used to check if an attribute is optional
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrOptionalBN")]
		public static extern int_t engiGetAttrOptionalBN(int_t entity, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrOptionalBN")]
		public static extern int_t engiGetAttrOptionalBN(int_t entity, byte[] attributeName);

		/// <summary>
		///		engiGetEntityIsAbstract                                 (http://rdf.bg/ifcdoc/CS64/engiGetEntityIsAbstract.html)
		///
		///	This call can be used to check if an entity is abstract
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityIsAbstract")]
		public static extern int_t engiGetEntityIsAbstract(int_t entity);

		/// <summary>
		///		engiGetEntityIsAbstractBN                               (http://rdf.bg/ifcdoc/CS64/engiGetEntityIsAbstractBN.html)
		///
		///	This call can be used to check if an entity is abstract
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityIsAbstractBN")]
		public static extern int_t engiGetEntityIsAbstractBN(int_t model, string entityName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityIsAbstractBN")]
		public static extern int_t engiGetEntityIsAbstractBN(int_t model, byte[] entityName);

		/// <summary>
		///		engiGetAttrInverse                                      (http://rdf.bg/ifcdoc/CS64/engiGetAttrInverse.html)
		///
		///	This call can be used to check if an attribute is an inverse relation
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrInverse")]
		public static extern int_t engiGetAttrInverse(int_t attribute);

		/// <summary>
		///		engiGetAttrInverseBN                                    (http://rdf.bg/ifcdoc/CS64/engiGetAttrInverseBN.html)
		///
		///	This call can be used to check if an attribute is an inverse relation
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrInverseBN")]
		public static extern int_t engiGetAttrInverseBN(int_t entity, string attributeName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrInverseBN")]
		public static extern int_t engiGetAttrInverseBN(int_t entity, byte[] attributeName);

		/// <summary>
		///		engiGetAttrDomain                                       (http://rdf.bg/ifcdoc/CS64/engiGetAttrDomain.html)
		///
		///	This call can be used to get the domain of an attribute
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrDomain")]
		public static extern void engiGetAttrDomain(int_t attribute, out IntPtr domainName);

		public static string engiGetAttrDomain(int_t attribute)
		{
			IntPtr domainName = IntPtr.Zero;
			engiGetAttrDomain(attribute, out domainName);
			return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(domainName);
		}

		/// <summary>
		///		engiGetAttrDomainBN                                     (http://rdf.bg/ifcdoc/CS64/engiGetAttrDomainBN.html)
		///
		///	This call can be used to get the domain of an attribute
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrDomainBN")]
		public static extern void engiGetAttrDomainBN(int_t entity, string attributeName, out IntPtr domainName);

		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttrDomainBN")]
		public static extern void engiGetAttrDomainBN(int_t entity, byte[] attributeName, out IntPtr domainName);

		public static string engiGetAttrDomainBN(int_t entity, byte[] attributeName)
		{
			IntPtr domainName = IntPtr.Zero;
			engiGetAttrDomainBN(entity, attributeName, out domainName);
			return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(domainName);
		}

		/// <summary>
		///		engiGetEnumerationValue                                 (http://rdf.bg/ifcdoc/CS64/engiGetEnumerationValue.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEnumerationValue")]
		public static extern void engiGetEnumerationValue(int_t attribute, int_t index, int_t valueType, out IntPtr enumerationValue);

		public static string engiGetEnumerationValue(int_t attribute, int_t index, int_t valueType)
		{
			IntPtr enumerationValue = IntPtr.Zero;
			engiGetEnumerationValue(attribute, index, sdaiSTRING, out enumerationValue); //marshaline expects ANSI
			return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(enumerationValue);
		}

		/// <summary>
		///		engiGetEntityAttributeByIndex                           (http://rdf.bg/ifcdoc/CS64/engiGetEntityAttributeByIndex.html)
		///
		///	Return attribute definition from attribute index
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetEntityAttributeByIndex")]
		public static extern int_t engiGetEntityAttributeByIndex(int_t entity, int_t index, bool countedWithParents, bool countedWithInverse);

		/// <summary>
		///		engiGetAttributeTraits                                  (http://rdf.bg/ifcdoc/CS64/engiGetAttributeTraits.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAttributeTraits")]
		public static extern void engiGetAttributeTraits(int_t attribute, out IntPtr name, out int_t definingEntity, out byte inverse, byte[] attrType, out int_t domainEntity, out int_t aggregationDescriptor, out byte optional, out byte unique);

		/// <summary>
		///		engiGetAggregation                                      (http://rdf.bg/ifcdoc/CS64/engiGetAggregation.html)
		///
		///	...
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "engiGetAggregation")]
		public static extern void engiGetAggregation(int_t aggregationDescriptor, out enum_express_aggr aggrType, out int_t cardinalityMin, out int_t cardinalityMax, out int_t nextAggregationLevelDescriptor);

        //
        //  Instance Header API Calls
        //

		/// <summary>
		///		SetSPFFHeader                                           (http://rdf.bg/ifcdoc/CS64/SetSPFFHeader.html)
		///
		///	This call is an aggregate of several SetSPFFHeaderItem calls. In several cases the header can be set easily with this call. In case an argument is zero, this argument will not be updated, i.e. it will not be filled with 0.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetSPFFHeader")]
		public static extern void SetSPFFHeader(int_t model, string description, string implementationLevel, string name, string timeStamp, string author, string organization, string preprocessorVersion, string originatingSystem, string authorization, string fileSchema);

		[DllImport(IFCEngineDLL, EntryPoint = "SetSPFFHeader")]
		public static extern void SetSPFFHeader(int_t model, byte[] description, byte[] implementationLevel, byte[] name, byte[] timeStamp, byte[] author, byte[] organization, byte[] preprocessorVersion, byte[] originatingSystem, byte[] authorization, byte[] fileSchema);

		/// <summary>
		///		SetSPFFHeaderItem                                       (http://rdf.bg/ifcdoc/CS64/SetSPFFHeaderItem.html)
		///
		///	This call can be used to write a specific header item, the source code example is larger to show and explain how this call can be used.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetSPFFHeaderItem")]
		public static extern int_t SetSPFFHeaderItem(int_t model, int_t itemIndex, int_t itemSubIndex, int_t valueType, string value);
